--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -7,25 +7,36 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="android.permission.ACCOUNT_MANAGER" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Sherlock">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Sherlock"
+            android:name=".GoogDrvShareApp">
         <activity android:name=".Main"
                 >
+            <meta-data android:name="com.google.android.apps.drive.APP_ID" android:value="id=445798695489"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".GetAccountActivity"
+                android:theme="@android:style/Theme.NoDisplay"
+                />
         <activity android:name=".GoogDriveOpen" android:exported="true"
                 android:label="goog_drive_open">
             <meta-data android:name="com.google.android.apps.drive.APP_ID" android:value="id=445798695489"/>
             <intent-filter>
                 <action android:name="com.google.android.apps.drive.DRIVE_OPEN"/>
                 <!--
-                <data android:mimeType="application/vnd.google-apps.drive-sdk.445798695489"/>
-                -->
                 <action android:name="android.intent.action.VIEW"/>
+            -->
+                <data android:mimeType="application/vnd.google-apps.drive-sdk.445798695489"/>
+
+
+
+
                 <data android:mimeType="*/*"/>
+
                 <category android:name="android.intent.category.DEFAULT" />
+
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
